--- a/labs/lab03/css/main.css
+++ b/labs/lab03/css/main.css
@@ -1,14 +1,16 @@
+html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
+
 .legend {
-     line-height: 16px;
-     width: 140px;
-     color: #333333;
-     font-family: 'Open Sans', Helvetica, sans-serif;
-     padding: 6px 8px;
-     background: white;
-     background: rgba(255,255,255,0.5);
-     box-shadow: 0 0 15px rgba(0,0,0,0.2);
-     border-radius: 5px;
- }
+    line-height: 16px;
+    width: 140px;
+    color: #333333;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    padding: 6px 8px;
+    background: white;
+    background: rgba(255,255,255,0.5);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
 
 .legend i {
     width: 16px;
