--- a/troubleshoot/layout/dc-fonts.html
+++ b/troubleshoot/layout/dc-fonts.html
@@ -35,10 +35,10 @@
             margin: 0 auto;
         }
 
-        /*text {*/
-            /*font-family: Lobster !important;*/
-            /*font-size: larger;*/
-        /*}*/
+        text {
+            font-family: Lobster !important;
+            font-size: 12px !important;
+        }
 
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
