--- a/labs/lab03/css/style.css
+++ b/labs/lab03/css/style.css
@@ -1,3 +1,5 @@
+html, body { width: 100%; height: 100%; margin: 0; background: #fff; }
+
 #mymap {
     position: fixed;
     top: 0;
@@ -23,9 +25,3 @@
     overflow-x: hidden;
     overflow-y: hidden;
 }
-
-/* 
-#date-chart {
-    width: 100%;
-    margin: 0 auto;
-} */
